# ai-agents-creator-gpt

examples/blog-writer/: pyproject.toml
examples/blog-writer/src/: main.py
examples/code-generator/: pyproject.toml
examples/code-generator/src/: main.py
instructions/: v1.md
knowledge/: agent-architectures.md  bt-best-practices.md  library-versions.md  memory-management.md  practical-bt-examples.md
prompts/: v1.md
